<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MeCore</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="welcome_to_mecore">Welcome To MeCore</string>
    <string name="forgot_password_reset_password">Forgot Password? Reset Password</string>
    <string name="fortnite">Fortnite</string>
    <string name="select_the_games_you_play">Select the games you play</string>
    <string name="minecraft">Minecraft</string>
    <string name="league_of_legends">League of Legends</string>
    <string name="submit">Submit</string>
    <string name="final_fantasy_xiv">Final Fantasy XIV</string>
    <string name="minecraft_dungeons">Minecraft Dungeons</string>
    <string name="genshin_impact">Genshin Impact</string>
    <string name="the_witcher_3">The Witcher 3</string>
    <string name="world_of_warcraft">World of Warcraft</string>
    <string name="valorant">Valorant</string>
    <string name="fifa_21">FIFA 21</string>
    <string name="hearthstone">Hearthstone</string>
    <string name="among_us">Among Us</string>
    <string name="roblox">Roblox</string>
    <string name="rocket_league">Rocket League</string>
    <string name="overwatch">Overwatch</string>
    <string name="counter_strike_global_offensive">Counter-Strike: Global Offensive</string>
    <string name="call_of_duty">Call of Duty</string>
    <string name="apex_legends">Apex Legends</string>
    <string name="pubg">PUBG</string>
    <string name="warzone">Warzone</string>
    <string name="enter_username">Enter username</string>
    <string name="search_user">Search User</string>
    <string name="results_will_appear_here">Results will appear here</string>
    <string name="find_random_user">Find Random User</string>
    <string name="send_friend_request">Send Friend Request</string>
    <string name="user_name">User Name</string>
    <string name="send">Send</string>
    <string name="type_a_message">Type a message</string>
    <string name="username">Username</string>
    <string name="already_have_an_account_log_in">Already Have an account? Log in!</string>
    <string name="decline" />
    <string name="accept" />
    <string name="user_document_not_found" />
    <string name="error_loading_games" />
    <string name="error_loading_users" />
    <string name="no_users_found" />
    <string name="no_users_match_games" />
    <string name="user_username" />
    <string name="no_user_selected" />
    <string name="friend_request_sent" />
    <string name="failed_to_send_request" />
    <string name="profile">Profile</string>
    <string name="chat">Chat</string>
    <string name="main">Main</string>
    <string name="data_not_loaded" />
    <string name="skip">Skip</string>
    <string name="chats">Chats</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="chat_list">Chat List</string>
    <string name="friends">Friends</string>
    <string name="unknown_user" />
    <string name="no_users_available" />
    <string name="chat_now" />
    <string name="send_message">Send message</string>
    <string name="error_missing_user_data" />
    <string name="chatting_with" />
    <string name="please_enter_message" />
    <string name="failed_to_send_message" />
    <string name="error_loading_messages" />
    <string name="message">Message</string>
    <string name="title_main" />
    <string name="title_chat" />
    <string name="title_profile" />
</resources>
