<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="32dp"
    android:background="@drawable/bg"
    android:gravity="center">

    <!-- Welcome text above the email and password fields -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_mecore"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textColorHint="@color/white"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:backgroundTint="@color/lime"/>

    <!-- Already Have an Account? Log in text -->
    <TextView
        android:id="@+id/textLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Already Have an account? Log in!"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:onClick="goToLoginActivity"/>

    <!-- Forgot Password? Reset Password text -->
    <TextView
        android:id="@+id/textResetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_reset_password"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:onClick="resetPassword"/>
</LinearLayout>
