<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center"
        android:background="@drawable/bg">

        <EditText
            android:id="@+id/searchEditText"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:autofillHints=""
            android:hint="@string/enter_username"
            android:padding="10dp"
            android:inputType="text"
            android:textColorHint="@color/white"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/searchButton"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:text="@string/search_user"
            android:backgroundTint="@color/lime"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/results_will_appear_here"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:padding="10dp"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/findUserButton"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:text="@string/find_random_user"
            android:textColor="@color/black"
            android:backgroundTint="@color/lime"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_navigation_menu" />

</RelativeLayout>
